# QLive

./: .gitignore  CMakeLists.txt
src/: httpserver.cpp  httpserver.h  qlive.cpp  qlive.h
src/core/: network.cpp  network.h  timer.cpp  timer.h  tobject.cpp  tobject.h
